update requirejs version

--- a/src/addons/blockly/frame.html
+++ b/src/addons/blockly/frame.html
@@ -6,8 +6,8 @@
   <title>eflang</title>
 
   <!--[if lt IE 10]>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/es5-shim/1.2.4/es5-shim.min.js "></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/1.2.4/es5-shim.min.js "></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script>
   <![endif]-->
   <link rel="stylesheet" media="all" href="media/blockly.css" />
   <script type="text/javascript" src="lib/eflang.min.js"></script>
