--- a/code.html
+++ b/code.html
@@ -6,18 +6,18 @@
 	<title>Json Edit</title>
 	<link rel="stylesheet" href="css/json.edit.css">
 	<link rel="stylesheet" href="css/demo.json.edit.css">
-	<link rel="stylesheet" href="http://marianoguerra.github.com/squide/css/squide.css">
-	<link rel="stylesheet" href="http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.css">
+	<link rel="stylesheet" href="//marianoguerra.github.com/squide/css/squide.css">
+	<link rel="stylesheet" href="//google-code-prettify.googlecode.com/svn/trunk/src/prettify.css">
 
- <link  type="text/css" rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/smoothness/jquery-ui.css" />
-	<link rel="stylesheet" href="http://ioncache.github.com/Tag-Handler/css/jquery.taghandler.css">
+ <link  type="text/css" rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/smoothness/jquery-ui.css" />
+	<link rel="stylesheet" href="//ioncache.github.com/Tag-Handler/css/jquery.taghandler.css">
  <style>
   .je-tagHandler ul.tagHandlerContainer { margin: 0; }
  </style>
 
 	<link rel="stylesheet" href="src/addons/summarylist/addon.css">
 
-	<script data-main="js/codedemo" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.0.2/require.min.js"></script>
+	<script data-main="js/codedemo" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.16/require.min.js"></script>
  
 </head>
 <body>
