fix raw.git urls

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="//google-code-prettify.googlecode.com/svn/trunk/src/prettify.css">
 
         <link  type="text/css" rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/smoothness/jquery-ui.css" />
-        <link rel="stylesheet" href="//ioncache.github.com/Tag-Handler/css/jquery.taghandler.css">
+        <link rel="stylesheet" href="//rawgit.com/ioncache/Tag-Handler/master/js/jquery.taghandler.js">
 
         <link rel="stylesheet" href="src/addons/summarylist/addon.css">
         <link rel="stylesheet" href="css/json.edit.css">
